--- a/src/Components/ItemsFilter/_items-filter.scss
+++ b/src/Components/ItemsFilter/_items-filter.scss
@@ -1,6 +1,6 @@
 .items-filter{
     color:rgba(0, 0, 0, 0.438);
-
+    box-shadow: 0 0 .5rem 0px rgba(black, .5);
 
     &__form{
         display: flex;
