--- a/src/Components/ItemPlace/_item-place.scss
+++ b/src/Components/ItemPlace/_item-place.scss
@@ -1,10 +1,14 @@
 .item-place{
+    
     &__items{
         width: 100%;
+        min-height: 40rem;
         display: grid;
         padding: 1rem;
-        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
         grid-auto-rows: minmax(20rem, auto);
         gap:1.5rem;
+        box-shadow: 0 0 .5rem 0px rgba(black, .5);
+        position: relative;
     }
 }
