--- a/src/Components/abstracts/_mixins.scss
+++ b/src/Components/abstracts/_mixins.scss
@@ -7,3 +7,13 @@
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
+
+@mixin bottomBar {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
