--- a/src/main.scss
+++ b/src/main.scss
@@ -22,4 +22,9 @@
 @import "./Components/PageBox/page-box";
 @import "./Components/SectionMainCart/section-main-cart";
 @import "./Components/SectionPayment/section-payment";
-@import "./Components/LoadingIcon/loading-icon"
+@import "./Components/LoadingIcon/loading-icon";
+@import "./Components/Loading/loading";
+@import "./Components/Error/error-message";
+@import "./Components/ErrorBoundary/error-boundary";
+@import "./Components/Registration/vendor-changes";
+@import "./Components/Layout/ButtonsBottom/buttons-bottom";
