--- a/src/Components/ItemsFilter/_items-filter.scss
+++ b/src/Components/ItemsFilter/_items-filter.scss
@@ -9,6 +9,7 @@
     }
     
     input, select{
+        cursor: pointer;
         margin-left:1rem;
         border: none;
         border-bottom: 2px solid rgba(0, 0, 0, 0.438);
