--- a/src/Components/abstracts/_mixins.scss
+++ b/src/Components/abstracts/_mixins.scss
@@ -17,3 +17,11 @@
     align-items: center;
     width: 100%;
 }
+
+
+@mixin centerer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
