--- a/src/Components/Registration/ModalRegistration/_modal.scss
+++ b/src/Components/Registration/ModalRegistration/_modal.scss
@@ -30,4 +30,9 @@
             filter: brightness(.9);
         }
     }
+
+    &__registred-text{
+        font-size: 2.5rem;
+        @include centerer();
+    }
 }
