--- a/src/main.scss
+++ b/src/main.scss
@@ -28,3 +28,4 @@
 @import "./Components/ErrorBoundary/error-boundary";
 @import "./Components/Registration/vendor-changes";
 @import "./Components/Layout/ButtonsBottom/buttons-bottom";
+@import "./Components/Header/header";
