--- a/src/Components/CartMini/_cart-mini.scss
+++ b/src/Components/CartMini/_cart-mini.scss
@@ -1,8 +1,24 @@
 .cart-mini{
-    width: 20rem;
-    border-radius: 3px;
-    overflow: hidden;
     z-index: 200;
+    width: 20rem;
+    position: fixed;
+    top: 6rem;
+    right:0;
+    transition: all .3s;
+    border-radius: 3px;
+    box-shadow: 0 0 .3rem rgba(black, .5);
+
+    &__switch-off{
+        box-shadow: 0 0 .3rem rgba(black, .5);
+        transition: all .3s;
+        border: none;
+        &:hover{
+            box-shadow: 0 0 .3rem rgba(#007bff, .5);
+        }
+        &:active{
+            box-shadow: 0 0 .1rem rgba(black, .5);
+        }
+    }
     &__top{
         display: flex;
         justify-content: space-between;
