--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -3,6 +3,9 @@
     width: 100%;
     height: 9rem;
     overflow: hidden;
+    @include respons(tab-port){
+        height: 6rem;
+    }
    &__place{
        position: absolute;
        width: 100%;
@@ -25,5 +28,6 @@
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
+       text-align: center;
     }
 }
