--- a/src/Components/Registration/ModalRegistration/_modal.scss
+++ b/src/Components/Registration/ModalRegistration/_modal.scss
@@ -8,12 +8,30 @@
     background-color: rgba(black, .9);
     &__box{
         width: 40rem;
-        height:40rem;
+        overflow-y: scroll;
         background-color:  white; //Test
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        &::-webkit-scrollbar {
+            width: .3rem;
+        }
+        
+        
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            background: #6c757d;
+            border-radius: 10px;
+        }
+        @include respons(tab-port){
+            width: 100%;
+            height: 100%;
+        }
     }
     &__off-bar{
         position: relative;
