--- a/src/main.scss
+++ b/src/main.scss
@@ -29,3 +29,8 @@
 @import "./Components/Registration/vendor-changes";
 @import "./Components/Layout/ButtonsBottom/buttons-bottom";
 @import "./Components/Header/header";
+@import "./Components/Finish/finish-page";
+@import "./Components/My404Component/my404component";
+@import "./Components/SectionContacts/contacts";
+@import "./Components/SectionAboutUs/about-us";
+@import "./Components/Carousel/carousel";
