--- a/src/Components/ItemDetails/_item-details.scss
+++ b/src/Components/ItemDetails/_item-details.scss
@@ -5,6 +5,10 @@
         box-shadow: 0 0 .5rem 0 rgba(black, .5);
         min-height: 20rem;
         position: relative;
+        @include respons(tab-port){
+           flex-direction: column;   
+           margin-top: 5rem;
+        }
         &-left{
          flex-basis: 30rem;
         }
@@ -14,6 +18,9 @@
             text-align: right;
             flex-grow: 1;
             position: relative;
+            @include respons(tab-port){
+                padding-bottom: 4rem;       
+             }
         }
     }
     
@@ -49,6 +56,9 @@
     
     &__price{
         font-size: 2.5rem;
+        @include respons(tab-port){
+            font-size: 1.5rem;
+         }
     }
 
     &__buy-btn{
