--- a/src/Components/Registration/_registration.scss
+++ b/src/Components/Registration/_registration.scss
@@ -3,19 +3,19 @@
     &__form{
         padding: 1rem;
         width: 100%;
-        height: 100%;
         overflow: hidden;
         position: relative;
+        padding-bottom: 5rem;
     }
 
     &__inputs{
         width: 100%;
         min-height: 80%;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 5rem);
-        grid-gap: 1rem;
-        grid-auto-flow: column;
+        grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+        grid-auto-rows: 5rem;
+        gap: 1rem;
+        
     }
     &__button-place{
         margin-top: 1.5rem;
