finish and complete reg comp fixed

--- a/src/Components/Finish/_finish-page.scss
+++ b/src/Components/Finish/_finish-page.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 40rem;
     background-image: url(
-    "https://lh3.googleusercontent.com/proxy/_3YlcrO79_WGYkf_bxDSVw6sKN7PMz3e8C4aR5owH3vx4qFF3LmomcRPO9Iife1m2T22r0fqTzu5Qs-xleyrQxmwu2jwxX20kxpC_1fEVbv8C0xmtfoYHZSjWYI"
+    "https://image.freepik.com/free-vector/boom_1308-2927.jpg"
     );
     background-repeat: no-repeat;
     background-position: center;
